@@ -6,96 +6,111 @@ import org.example.ecommercefashion.config.socket.RoomSubscriptionService;
 import org.example.ecommercefashion.config.socket.WebSocketService;
 import org.example.ecommercefashion.dtos.request.ChatRequest;
 import org.example.ecommercefashion.dtos.response.ChatResponse;
+import org.example.ecommercefashion.dtos.response.ChatRoomResponse;
 import org.example.ecommercefashion.entities.Chat;
-import org.example.ecommercefashion.entities.User;
 import org.example.ecommercefashion.repositories.ChatRepository;
 import org.example.ecommercefashion.repositories.UserRepository;
 import org.example.ecommercefashion.services.ChatRoomService;
 import org.example.ecommercefashion.services.ChatService;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.data.mongodb.core.query.Update;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
 import java.util.Date;
 import java.util.List;
-import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ChatServiceImpl implements ChatService {
 
-    final ChatRepository chatRepository;
-    final UserRepository userRepository;
-    final WebSocketService webSocketService;
-    final ChatRoomService chatRoomService;
-    final MongoTemplate mongoTemplate;
-    final RoomSubscriptionService subscriptionService;
+    private final ChatRepository chatRepository;
+    private final UserRepository userRepository;
+    private final WebSocketService webSocketService;
+    private final ChatRoomService chatRoomService;
+    private final MongoTemplate mongoTemplate;
+    private final RoomSubscriptionService subscriptionService;
 
     @Override
-    public ChatResponse create(ChatRequest request) {
-        Chat entity = FnCommon.copyProperties(Chat.class, request);
-        defaultCreateValue(entity);
-        Chat save = chatRepository.save(entity);
-        ChatResponse response = toDto(save);
+    public ChatResponse createChat(ChatRequest request) {
+        Chat chatEntity = FnCommon.copyProperties(Chat.class, request);
+        setDefaultChatValues(chatEntity);
+        Chat savedChat = chatRepository.save(chatEntity);
+        ChatResponse chatResponse = toDto(savedChat);
 
-        seenAllChatByIdChatRoom(request.getIdRoom(), request.getCreateBy());
-        webSocketService.responseRealtime("/room/" + request.getIdRoom(), response);
+        markAllChatsAsSeenAsync(request.getIdRoom());
+        webSocketService.responseRealtime("/room/" + request.getIdRoom(), chatResponse);
 
-        return response;
+        return chatResponse;
     }
 
     @Override
-    public List<ChatResponse> findAllChatByIdChatRoom(String id, int p) {
+    public List<ChatResponse> findAllChatsByRoomId(String roomId, int page) {
         int limit = 15;
-        int offset = p * limit;
-        return chatRepository.findAllChatByIdChatRoom(id, offset, limit).stream()
+        int offset = page * limit;
+        return chatRepository.findAllChatByIdChatRoom(roomId, offset, limit).stream()
                 .map(this::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public void seenAllChatByIdChatRoom(String id, Long createBy) {
-        boolean isSeen = subscriptionService.getUsersInRoom(id).stream()
-                .anyMatch(idUser -> {
-                    Optional<User> optional = userRepository.findById(idUser);
-                    if (optional.isPresent()) {
-                        return optional.get().getIsAdmin();
-                    }
-                    return false;
-                }) || createBy == null;
-        if (isSeen) {
-            Query query = new Query(Criteria.where("id_room").is(id));
+    public void markAllChatsAsSeen(String roomId, Long userId) {
+        updateSeenStatus(roomId, userId);
+        var chatRooms = findAllChatRoomsCached();
+        webSocketService.responseRealtime("/admin", chatRooms);
+    }
+
+    @Async
+    public void markAllChatsAsSeenAsync(String roomId) {
+        var usersInRoom = subscriptionService.getUsersInRoom(roomId);
+        updateSeenStatus(roomId, usersInRoom);
+        var chatRooms = findAllChatRoomsCached();
+        webSocketService.responseRealtime("/admin", chatRooms);
+    }
+
+    private void updateSeenStatus(String roomId, Long creatorId) {
+        Query query = new Query();
+        query.addCriteria(Criteria.where("id_room").is(roomId));
+        query.addCriteria(Criteria.where("create_by").ne(creatorId));
+
+        Update update = new Update().set("seen", true);
+        mongoTemplate.updateMulti(query, update, Chat.class);
+    }
+
+    private void updateSeenStatus(String roomId, Set<Long> userIds) {
+        for(Long userId : userIds) {
+            Query query = new Query();
+            query.addCriteria(Criteria.where("id_room").is(roomId));
+            query.addCriteria(Criteria.where("create_by").ne(userId));
+
             Update update = new Update().set("seen", true);
             mongoTemplate.updateMulti(query, update, Chat.class);
         }
-        var responses = chatRoomService.findAllChatRoom().stream()
-                .map(chatRoom -> {
-                    if (chatRoom.getId().equals(id)) {
-                        chatRoom.setSeen(isSeen);
-                    }
-                    return chatRoom;
-                })
-                .toList();
-        webSocketService.responseRealtime("/admin", responses);
     }
 
-    private void defaultCreateValue(Chat entity) {
-        entity.setId(UUID.randomUUID().toString());
-        entity.setCreateAt(new Date());
-        entity.setDeleted(false);
-        entity.setSeen(false);
+    @Cacheable("chatRooms")
+    public List<ChatRoomResponse> findAllChatRoomsCached() {
+        return chatRoomService.findAllChatRoom();
     }
 
-    private ChatResponse toDto(Chat entity) {
-        ChatResponse response = FnCommon.copyProperties(ChatResponse.class, entity);
-        userRepository.findById(entity.getCreateBy())
-                .ifPresent(ent -> {
-                    response.setAvatar(ent.getAvatar());
-                });
-        return response;
+    private void setDefaultChatValues(Chat chatEntity) {
+        chatEntity.setId(UUID.randomUUID().toString());
+        chatEntity.setCreateAt(new Date());
+        chatEntity.setDeleted(false);
+        chatEntity.setSeen(false);
+    }
+
+    private ChatResponse toDto(Chat chatEntity) {
+        ChatResponse chatResponse = FnCommon.copyProperties(ChatResponse.class, chatEntity);
+        userRepository.findById(chatEntity.getCreateBy())
+                .ifPresent(user -> chatResponse.setAvatar(user.getAvatar()));
+        return chatResponse;
     }
 
 }
